--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.example.przemyslaw.aw"
         minSdkVersion 15
         targetSdkVersion 25
@@ -31,4 +32,5 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
     compile files('libs/astrocalculator.jar')
+    compile files('libs/gson-2.8.0.jar')
 }
