--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/astrocalculator.jar')
     compile files('libs/gson-2.8.0.jar')
+    compile files('libs/json-simple-1.1.jar')
 }
